infra/cats-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-deployment
  labels:
    app: cats
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cats # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: cats # this should match the selector in service.yml
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1001 
        runAsGroup: 1001  
        runAsNonRoot: true
      serviceAccountName: ${NAMESPACE}
      containers:
        - name: cats
          image: ${REGISTRY}/${REPOSITORY}:cats-${IMAGE_TAG}
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /alive
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /alive
              port: 8080
            periodSeconds: 20
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop: ["ALL"]
