infra/port-forward-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: port-forward-deployment
  labels:
    app: port-forward
spec:
  replicas: 1
  selector:
    matchLabels:
      app: port-forward
  template:
    metadata:
      labels:
        app: port-forward
    spec:
      serviceAccountName: ${NAMESPACE}
      containers:
        - name: port-forward
          image: ministryofjustice/port-forward@sha256:eaed873978acf6ccf23f08315f56ef71f0a7ffcd6a0bea821459bfb363b65e76 
          ports:
            - containerPort: 11433   # this is your LOCAL_PORT inside the pod
