infra/seeder-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: seeder-${IMAGE_TAG}
  labels:
    app: seeder
spec:
  serviceAccountName: ${NAMESPACE}
  restartPolicy: OnFailure
  securityContext:
    seccompProfile:
      type: RuntimeDefault
    runAsUser: 1001
    runAsGroup: 1001
    runAsNonRoot: true
  containers:
    - name: seeder
      image: ${REGISTRY}/${REPOSITORY}:seeder-${IMAGE_TAG}
      securityContext:
        allowPrivilegeEscalation: false
        privileged: false
        capabilities:
          drop: ["ALL"]
