infra/cats-worker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cats-worker-service
spec:
  selector:
    app: cats-worker
  ports:
    - name: http
      port: 8080
      targetPort: 8080
