infra/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis # this should match the pod label in deployment.yml
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
